--- a/src/data/post/003.beat-sheet.md
+++ b/src/data/post/003.beat-sheet.md
@@ -9,8 +9,8 @@ metadata:
 GUMMY approaches SHADOWED tunnel
 The outer film covering the GENERIC GUMMY grays out into a shade of anti-rainbow
 GUMMY martyrizes from the RATCHET WORKS into PIVOT SPACE
-A certain percentage of wellness is restored back in the GUMMY
-dividing
+Particles dividing out between different colored names as wellness restored back into the GUMMY
+GUMMY relaxes
 skating
 GUMMY becomes hard
 GUMMY becomes soft
