--- a/src/data/post/004.game-play.md
+++ b/src/data/post/004.game-play.md
@@ -2,7 +2,7 @@
 publishDate: 2025-09-28T00:00:00Z
 title: 'Game Play'
 excerpt: A time-based game mechanic involving different 'Gummies' that generate movement 'beats' recorded on a blockchain, with special props and penalties.
-image: https://ik.imagekit.io/fictiq/00048-0-topaz-upscale-2x.png?updatedAt=1759117967085
+image: https://ik.imagekit.io/fictiq/palettized-0019-2804258990.png
 tags:
   - landing-pages
   - front-end
