--- a/data/000.info.md
+++ b/data/000.info.md
@@ -496,3 +496,75 @@ This architecture cleanly separates the concerns:
 *   **Clerk Middleware:** Secures those pages.
 *   **Client-Side JavaScript:** Handles user interactions (form submissions) and communicates with the backend.
 *   **Game API Backend:** Contains the core game logic and validates the session token on every request.
+
+
+---
+import Layout from '../../../layouts/Layout.astro';
+import { getAuth } from 'astro-clerk-auth';
+
+// Define the expected shape of the profile data for type safety
+interface PlayerProfile {
+  clerkId: string;
+  characterName: string;
+  level: number;
+  guild: string | null;
+}
+
+// 1. Get the authentication state on the server.
+const { getToken, userId } = await getAuth(Astro.request);
+
+// Middleware should handle this, but it's a good safeguard.
+if (!userId) {
+  return Astro.redirect('/sign-in');
+}
+
+let playerProfile: PlayerProfile | null = null;
+let fetchError: string | null = null;
+
+try {
+  // 2. Get the session token.
+  const token = await getToken();
+  
+  // 3. Make the server-to-server fetch request to your Next.js Game API.
+  //    Use an environment variable for the API URL.
+  const apiResponse = await fetch(`${import.meta.env.GAME_API_URL}/api/player/profile`, {
+    method: 'GET',
+    headers: {
+      // 4. Pass the user's session token for authorization.
+      'Authorization': `Bearer ${token}`
+    }
+  });
+
+  if (!apiResponse.ok) {
+    throw new Error(`Failed to fetch profile. Status: ${apiResponse.status}`);
+  }
+
+  playerProfile = await apiResponse.json();
+
+} catch (error) {
+  console.error("Error in profile.astro:", error.message);
+  fetchError = "Could not load your player profile at this time.";
+}
+---
+<Layout title="Player Profile">
+  <main>
+    <h1>Your Account Profile</h1>
+
+    {fetchError && <p style="color: red;">{fetchError}</p>}
+
+    {playerProfile && (
+      <div>
+        <h2>Welcome, {playerProfile.characterName}!</h2>
+        <ul>
+          <li><strong>Level:</strong> {playerProfile.level}</li>
+          <li><strong>Guild:</strong> {playerProfile.guild || 'Not in a guild'}</li>
+          <li><strong>User ID:</strong> {playerProfile.clerkId}</li>
+        </ul>
+      </div>
+    )}
+
+    {!playerProfile && !fetchError && (
+      <p>Loading profile...</p>
+    )}
+  </main>
+</Layout>
