--- a/data/000.info.md
+++ b/data/000.info.md
@@ -1024,3 +1024,218 @@ You need to send a request to this endpoint with a valid Clerk session token.
 *   **Trust but Verify:** After this line, if `userId` is not null, you have a cryptographically verified guarantee that the request was made by the user with that ID. You can then confidently use this `userId` to query your own database for game-specific data.
 
 This pattern is extremely powerful because it abstracts away all the complexities of JWT validation, allowing you to focus purely on your game's logic.
+
+
+
+---
+---
+---
+
+
+To include the `Authorization: Bearer <YOUR_CLERK_SESSION_TOKEN>` header in your Postman GET request, you first need to obtain a suitable session token from Clerk and then configure Postman to use it. Here's a step-by-step guide:
+
+### Step 1: Obtain Your Clerk Session Token
+
+For testing purposes with tools like Postman, it's recommended to generate a long-lived JSON Web Token (JWT) from your Clerk application. Standard session tokens issued by Clerk expire quickly, making them impractical for manual API testing.
+
+1.  **Create a JWT Template in Clerk:**
+    *   Navigate to the "JWT Templates" page in your Clerk Dashboard.
+    *   Create a new template, for instance, by choosing the "Blank" template.
+    *   Give your template a recognizable name (e.g., "postman-testing").
+    *   Set a longer "Token Lifetime" that suits your testing needs. You can set it for up to 10 years (315360000 seconds).
+
+2.  **Generate the Long-Lived Token:**
+    *   Open your frontend application where you are logged in with a user.
+    *   Open your browser's developer tools and go to the "Console" tab.
+    *   Execute the following command, replacing `<the template name you chose above>` with the actual name of your JWT template:
+        ```javascript
+        await window.Clerk.session.getToken({ template: '<the template name you chose above>' })
+        ```
+    *   This command will return a long-lived session token in the console. Copy this token.
+
+### Step 2: Add the Authorization Header in Postman
+
+You have two primary ways to add the bearer token to your request in Postman: using the "Authorization" tab or adding it directly to the "Headers".
+
+#### Option A: Using the "Authorization" Tab (Recommended)
+
+This is the most straightforward method for handling authorization tokens in Postman.
+
+1.  **Create a new request:** Open Postman and create a new GET request.
+2.  **Enter the Request URL:** In the request URL field, enter the endpoint you want to query.
+3.  **Navigate to the "Authorization" tab:** Below the URL input, click on the "Authorization" tab.
+4.  **Select "Bearer Token":** From the "Type" dropdown menu, select "Bearer Token".
+5.  **Paste your token:** In the "Token" field on the right, paste the Clerk session token you copied from the browser console.
+
+Postman will automatically add the `Authorization` header with the `Bearer` prefix to your request.
+
+#### Option B: Adding the Header Manually
+
+Alternatively, you can add the authorization information directly in the request headers.
+
+1.  **Go to the "Headers" tab:** In your Postman request, click on the "Headers" tab.
+2.  **Add a new header:**
+    *   In the "KEY" column, enter `Authorization`.
+    *   In the "VALUE" column, enter `Bearer <YOUR_CLERK_SESSION_TOKEN>`, replacing `<YOUR_CLERK_SESSION_TOKEN>` with the token you obtained.
+
+### Best Practice: Using Environment Variables for Your Token
+
+To avoid pasting the token in every request and to keep your sensitive token separate from your requests, you can use Postman's environment variables.
+
+1.  **Create an Environment:** In the top left of Postman, click on "Environments" and create a new environment (e.g., "Clerk API Testing").
+2.  **Add a Variable:** Add a new variable, for example, named `clerk_session_token`, and paste your token into the "INITIAL VALUE" and "CURRENT VALUE" fields. Save the environment.
+3.  **Select the Environment:** In the top right of the Postman window, select the environment you just created from the dropdown menu.
+4.  **Use the Variable in your Request:**
+    *   In the "Authorization" tab, where you would paste the token, you can now use `{{clerk_session_token}}`.
+    *   If adding the header manually, the value would be `Bearer {{clerk_session_token}}`.
+
+By following these steps, you can successfully include your Clerk session token in your Postman GET requests to authenticate with your backend API.
+
+
+---
+---
+---
+
+Of course. To manage the Clerk session token and include it in your TanStack Query request, you need to use Clerk's provided React hooks. The standard way to get the token is with the `useAuth` hook.
+
+Furthermore, since your operation is a `POST` request that modifies data (a "write" operation), the architecturally correct tool in TanStack Query is **`useMutation`**, not `useQuery`. `useQuery` is for fetching (reading) data.
+
+Here is the recommended way to accomplish this, using `useMutation`.
+
+### The Recommended Approach: Using `useMutation`
+
+This is the idiomatic way to handle "write" operations with TanStack Query. It gives you functions to trigger the mutation, and states to track its progress.
+
+#### Step 1: Update Your Custom Hook to use `useMutation`
+
+Your custom hook will now use `useMutation` and will internally use the `useAuth` hook to get the token.
+
+**`useWriteFictiq.ts`**
+```typescript
+import { useMutation } from "@tanstack/react-query";
+import { useAuth } from "@clerk/nextjs"; // Import the useAuth hook from Clerk
+
+// The mutation function is the async logic that performs the request.
+const writeToFictiq = async (token: string | null) => {
+  if (!token) {
+    throw new Error("Authentication token is not available.");
+  }
+  
+  const url = 'https://upload-r2-assets.fictiq.workers.dev/README.md';
+  const data = `game on`; // Your data to send
+
+  const response = await fetch(url, {
+    method: 'POST',
+    headers: {
+      'Content-Type': 'application/json',
+      'Authorization': `Bearer ${token}` // Use the dynamically fetched token
+    },
+    body: JSON.stringify(data)
+  });
+
+  if (!response.ok) {
+    throw new Error(`HTTP error! Status: ${response.status}`);
+  }
+
+  return response.text(); // Return the response data
+};
+
+
+export function useWriteFictiq() {
+  // 1. Get the getToken function from Clerk's useAuth hook.
+  const { getToken } = useAuth();
+
+  return useMutation({
+    // 2. The mutationFn will now get the token before making the API call.
+    mutationFn: async () => {
+      const token = await getToken(); // getToken is async
+      return writeToFictiq(token);
+    },
+    // Optional: Add onSuccess and onError handlers
+    onSuccess: (data) => {
+      console.log("Write successful:", data);
+      // You could invalidate other queries here if this write affects them.
+      // queryClient.invalidateQueries({ queryKey: ['someOtherData'] });
+    },
+    onError: (error) => {
+      console.error("Write failed:", error.message);
+    }
+  });
+}
+```
+
+#### Step 2: Use the Hook in Your Component
+
+Your component will now get a `mutate` function from the hook, which you can call from a button's `onClick` handler.
+
+**`MyComponent.tsx`**
+```tsx
+'use client';
+import { useWriteFictiq } from './useWriteFictiq'; // Adjust path
+import { useAuth } from "@clerk/nextjs";
+
+function MyComponent() {
+  // Use the custom mutation hook
+  const { mutate, isPending } = useWriteFictiq();
+  const { isSignedIn } = useAuth();
+
+  const handleWriteClick = () => {
+    // Call the mutate function to trigger the POST request.
+    mutate();
+  };
+
+  if (!isSignedIn) {
+    return <div>Please sign in to perform this action.</div>;
+  }
+
+  return (
+    <div>
+      <button onClick={handleWriteClick} disabled={isPending}>
+        {isPending ? 'Writing...' : 'Write to Fictiq'}
+      </button>
+    </div>
+  );
+}
+```
+
+---
+
+### Explanation of Key Concepts
+
+1.  **`useAuth` Hook:** This is the primary hook from `@clerk/nextjs` for accessing authentication state.
+    *   **`getToken()`:** This is an **asynchronous function** that returns the session JWT for the currently signed-in user. You must `await` it.
+    *   **`isSignedIn`:** A boolean that tells you if a user is currently logged in.
+
+2.  **`useMutation` vs. `useQuery`:**
+    *   **`useQuery`** is for *reading* data (`GET` requests). It runs automatically based on its `queryKey` and has features for caching and background refetching.
+    *   **`useMutation`** is for *writing* data (`POST`, `PUT`, `DELETE`). It does **not** run automatically. It gives you a `mutate` function that you call manually to trigger the operation.
+
+3.  **The Flow:**
+    *   Your component renders. The `useWriteFictiq` hook is called, which sets up the mutation but does not run it.
+    *   The user clicks the button.
+    *   The `handleWriteClick` function calls `mutate()`.
+    *   TanStack Query then executes your `mutationFn`.
+    *   Inside `mutationFn`, `await getToken()` is called to get the fresh Clerk session token.
+    *   The `fetch` request is made with the token in the `Authorization` header.
+    *   The `isPending`, `onSuccess`, or `onError` states update accordingly.
+
+### Prerequisite: `<ClerkProvider>`
+
+Ensure that your entire application is wrapped in a `<ClerkProvider>` in your root `layout.tsx` file. This is what allows hooks like `useAuth` to access the authentication context.
+
+**`src/app/layout.tsx`**
+```tsx
+import { ClerkProvider } from '@clerk/nextjs'
+
+export default function RootLayout({ children }: { children: React.ReactNode }) {
+  return (
+    <ClerkProvider>
+      <html lang="en">
+        <body>{children}</body>
+      </html>
+    </ClerkProvider>
+  )
+}
+```
+
+
